--- a/face_page.html
+++ b/face_page.html
@@ -147,6 +147,6 @@ function addtocart(elem){
     cartarr.push(elem);
     console.log(cartarr)
     localStorage.setItem("cartdata",JSON.stringify(cartarr))
-    alert("item added to cart")
+    alert("item added to bag")
 }
 </script>
