--- a/project/login.html
+++ b/project/login.html
@@ -9,9 +9,8 @@
     <title>Document</title>
     <style>
         #container{
-            display: grid;
-            grid-template-columns: repeat(2,1fr);
-            width:70%;
+            display: flex;
+            width:80%;
             margin:auto;
             height: 400px;
         }
@@ -24,10 +23,10 @@
         #second{
             margin-left:50px;
             height: auto;
-            width: 90%;
+            width: 100%;
         }
         #header{
-            width:70%;
+            width:80%;
             margin:auto;
         }
         h4{
@@ -47,16 +46,14 @@
          }
         a{
             color:red;
-            width: auto;
-            display: inline;
         }
         p{
-            width: auto;
+            width: 500px;
         }
         #checkbox{
             display: flex;
             margin-left: 5px;
-            width: auto;
+            width: 500px;
             height: auto;
         }
         #checkbox>p{
@@ -93,11 +90,8 @@
             height: 30px;
             margin-top: 20px;
         }
-        @media only screen and (min-width: 0px) and (max-width: 575px) {
-  #container {
-    grid-template-columns: column;
-  }
-}
+    
+
  
     </style>
 </head>
@@ -124,9 +118,11 @@
                         <p>Show password</p>
                     </div>
                     <div id ="checkbox">
-                        <input type="checkbox">
-                        <p>*I agree to Bobbi Brown's <a href="">Terms and Conditons</a> and </p>
-                        <p><a href="">Privacy Policy</a></p>
+                        <input type="checkbox" >
+                        <p>*I agree to Bobbi Brown's<a href="#">Terms and Conditons</a> and 
+                            <a href="#">Privacy Policy</a>
+                         </p> 
+                        
                     </div>
                      <div id ="checkbox">
                         <input type="checkbox">
