--- a/checkout.html
+++ b/checkout.html
@@ -160,7 +160,7 @@ font-family: "BBText Bold",Helvetica,Arial,sans-serif;
 
 <body>
     <div id= "container1">
-        <a href="home.html">
+        <a href="index.html">
        <img id = "name" src="https://m.bobbibrowncosmetics.com/media/export/cms/logo.png" width= 300 alt="">
        </a> 
     </div>
