--- a/finalcheckout.html
+++ b/finalcheckout.html
@@ -142,7 +142,7 @@ font-family: "BBText Bold",Helvetica,Arial,sans-serif;
 
 <body>
     <div id= "container1">
-        <a href="home.html">
+        <a href="index.html">
         
        <img id = "name" src="https://m.bobbibrowncosmetics.com/media/export/cms/logo.png" width= 300 alt="">
        </a> 
@@ -247,7 +247,7 @@ font-family: "BBText Bold",Helvetica,Arial,sans-serif;
 
         if(b=="123456789" && c=="321" && d=="2025"){
             alert("Congratualtion Order placed")
-            window.location.href="home.html"
+            window.location.href="index.html"
         }
         else{
             alert("invalid credit card details");
