--- a/index.html
+++ b/index.html
@@ -315,12 +315,12 @@
 			</select>
 		</div>
 
-		<a href="home.html"><button class="sign_btn">Submit</button></a>
+		<a href="index.html"><button class="sign_btn">Submit</button></a>
 	</div>
 	</div>
 	<div class="header-span-iner"></div>
 	<div>
-		<a href="home.html">
+		<a href="index.html">
 		<img class="header-img" src="https://www.bobbibrowncosmetics.com/media/export/cms/logo.png">
 		</a>
 	</div>
