--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id= "container1">
-    <a href="home.html">
+    <a href="index.html">
        <img id = "name" src="https://m.bobbibrowncosmetics.com/media/export/cms/logo.png" width= 300 alt=""> 
     </a>
     </div>
