--- a/sign.html
+++ b/sign.html
@@ -10,7 +10,7 @@
 <body>
 
    <div id= "container1">
-      <a href="home.html">
+      <a href="index.html">
        <img id = "name" src="https://m.bobbibrowncosmetics.com/media/export/cms/logo.png" width= 300 alt=""> 
     </a> 
     </div>
