--- a/skincare.html
+++ b/skincare.html
@@ -317,7 +317,7 @@
 	</div>
 	<div class="header-span-iner"></div>
 	<div>
-		<a href="home.html">
+		<a href="index.html">
 		<img class="header-img" src="https://www.bobbibrowncosmetics.com/media/export/cms/logo.png">
 		</a>
 	</div>
